<resources>
    <string name="app_name">Swoosh</string>
    <string name="app_logo">app logo</string>
    <string name="background">background</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="bg_1">bg_1</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="sub">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="bg_beginner">bg_beginner</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="search_league">Looking for a Co-Ed Beginner League near you...</string>
    <string name="searchLeagueTxt">TextView</string>
</resources>
