<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/bg_1"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2" android:scaleType="fitCenter"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:id="@+id/textView" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:textSize="46sp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@color/colorAccent"
            android:textSize="22sp" android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textStyle="bold"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/sub"
            android:layout_width="215dp"
            android:layout_height="42dp"
            android:id="@+id/textView3" android:singleLine="false"
            android:textColor="@color/colorAccent" android:textAlignment="center" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/montserrat"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"
            android:fontFamily="@font/montserrat" android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp" android:textColor="@android:color/white"
            android:background="@drawable/swoosh_button"/>

</android.support.constraint.ConstraintLayout>